force-app/main/default/objects/Notification_Rule__c/Notification_Rule__c.object-meta.xml
<CustomObject>
    <label>Notification Rule</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Notification Rule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Notification Rules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>