force-app/main/default/objects/Notification_Rule__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the rule is active or inactive.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>