force-app/main/default/objects/Notification_Rule__c/fields/Criteria__c.field-meta.xml
<CustomField>
    <fullName>Criteria__c</fullName>
    <description>Defines the conditions that trigger the rule. Could use a formula-like syntax.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Criteria</label>
    <type>TextArea</type>
</CustomField>