force-app/main/default/objects/Notification_Rule__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>Internal description of the rule&apos;s purpose, logic, and any special considerations.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>