force-app/main/default/objects/Notification_Rule__c/fields/Email_Template_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Template_Name__c</fullName>
    <description>Name of the EmailTemplate standard object Record. Used when the channel is &quot;Email&quot; or &quot;Both.&quot;</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Email Template Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>