force-app/main/default/objects/Notification_Rule__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <description>External ID for use in Flows and External Systems</description>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>External Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>