force-app/main/default/objects/Notification_Rule__c/fields/In_App_Notification_Template__c.field-meta.xml
<CustomField>
    <fullName>In_App_Notification_Template__c</fullName>
    <description>If Notification_Channel__c is &quot;In-App&quot; or &quot;Both&quot; stores the template for in-app notifications. Supports basic text formatting and merge fields.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>In App Notification Template</label>
    <length>80</length>
    <type>Text</type>
</CustomField>