force-app/main/default/objects/Notification_Rule__c/fields/Is_Available_for_Newsletters__c.field-meta.xml
<CustomField>
    <fullName>Is_Available_for_Newsletters__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, this output can be put into a newsletter Notification</description>
    <label>Is Available for Newsletters?</label>
    <type>Checkbox</type>
</CustomField>