force-app/main/default/objects/Notification_Rule__c/fields/Last_Evaluated_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Evaluated_Date__c</fullName>
    <description>Tag the date time the batch was last run - not needed for Trigger based rules.</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Last Evaluated Date</label>
    <type>DateTime</type>
</CustomField>