force-app/main/default/objects/Notification_Rule__c/fields/Notification_Channel__c.field-meta.xml
<CustomField>
    <fullName>Notification_Channel__c</fullName>
    <description>Values: &quot;Email&quot; &quot;In-App&quot; &quot;Both.&quot; Specifies the delivery method.</description>
    <label>Notification Channel</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Email</fullName>
            </value>
            <value>
                <fullName>In-App</fullName>
            </value>
            <value>
                <fullName>Both</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>