force-app/main/default/objects/Notification_Rule__c/fields/Offset_Number__c.field-meta.xml
<CustomField>
    <fullName>Offset_Number__c</fullName>
    <description>If Trigger Type is &quot;Time-Based&quot; the number of time units to offset the notification. Negative numbers are before the</description>
    <label>Offset Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>