force-app/main/default/objects/Notification_Rule__c/fields/Offset_Type__c.field-meta.xml
<CustomField>
    <fullName>Offset_Type__c</fullName>
    <description>Values: &quot;Hours&quot; &quot;Days.&quot; The unit to use with Offset Number.</description>
    <label>Offset Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hours</fullName>
            </value>
            <value>
                <fullName>Days</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>