force-app/main/default/objects/Notification_Rule__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <description>Sets the priority of the rule for evaluation order (lower numbers are evaluated first).</description>
    <label>Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>