force-app/main/default/objects/Notification_Rule__c/fields/Recipient_CC_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Recipient_CC_Email_Field__c</fullName>
    <description>Field which denotes the CC: for a given notification</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient CC Email Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>