force-app/main/default/objects/Notification_Rule__c/fields/Recipient_Email_Field__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Email_Field__c</fullName>
    <description>If Recipient_Type__c is &quot;Related User&quot; this field specifies which field on the object to use to find the recipient (e.g., Contact__r.Email, OwnerId).</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Recipient Email Field</label>
    <length>80</length>
    <type>Text</type>
</CustomField>