force-app/main/default/objects/Notification_Rule__c/fields/Recipient_Type__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Type__c</fullName>
    <description>Values: &quot;Record Owner&quot; &quot;Related User&quot; &quot;Specific User&quot; &quot;User Group&quot;, &quot;External Email&quot;.</description>
    <label>Recipient Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Owner</fullName>
            </value>
            <value>
                <fullName>Related User</fullName>
            </value>
            <value>
                <fullName>Specified User</fullName>
            </value>
            <value>
                <fullName>User Group</fullName>
            </value>
            <value>
                <fullName>External Email</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>