force-app/main/default/objects/Notification_Rule__c/fields/Trigger_Object__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Object__c</fullName>
    <label>Trigger Object</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account</fullName>
            </value>
            <value>
                <fullName>Contact</fullName>
            </value>
            <value>
                <fullName>Engagement__c</fullName>
                <label>Engagement</label>
            </value>
            <value>
                <fullName>Information_Request__c</fullName>
                <label>Information Request</label>
            </value>
            <value>
                <fullName>ace_File__c</fullName>
                <label>Shared File</label>
            </value>
            <value>
                <fullName>User</fullName>
            </value>
            <value>
                <fullName>Work_Authorization__c</fullName>
                <label>Work Authorization</label>
            </value>
            <value>
                <fullName>Work_Record__c</fullName>
                <label>Work Record</label>
            </value>
            <value>
                <fullName>Consent__c</fullName>
                <label>Consent</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>