force-app/main/default/objects/Notification_Rule__c/fields/Trigger_Type__c.field-meta.xml
<CustomField>
    <fullName>Trigger_Type__c</fullName>
    <description>Values: &quot;Record Created&quot; &quot;Record Updated&quot; &quot;Time-Based&quot;</description>
    <label>Trigger Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Record Created</fullName>
            </value>
            <value>
                <fullName>Record Updated</fullName>
            </value>
            <value>
                <fullName>Time Based</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>