force-app/main/default/objects/Notification_Rule__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <description>Categorizes the notification rule (e.g., &quot;Onboarding&quot; &quot;Consultation&quot; &quot;Tax Return&quot; &quot;File Sharing&quot;).</description>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Onboarding</fullName>
            </value>
            <value>
                <fullName>Consultation</fullName>
            </value>
            <value>
                <fullName>Tax Return</fullName>
            </value>
            <value>
                <fullName>File Sharing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>